# marginalia

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  DEPLOY.md  PROMPT.md  Procfile  README.md  pyproject.toml  ralph.yml  references.bib  render.yaml
.agent/: events.jsonl  scratchpad.md  summary.md
.agent/.agent/: events.jsonl
.obsidian/: workspace.json
agents/: __init__.py  api.py  auth.py  bibtex_parser.py  cli.py  models.py  pdf_finder.py  summarizer.py  vault.py
app/: index.html  landing.html  setup.html
marginalia-app/: REFACTOR_PLAN.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
marginalia-app/src/: index.html  main.ts  test.html  types.ts
marginalia-app/src-tauri/: Cargo.toml  tauri.conf.json
marginalia-app/src-tauri/capabilities/: default.json
marginalia-app/src-tauri/icons/: icon.icns
marginalia-app/src-tauri/src/: lib.rs  main.rs
marginalia-app/src-tauri/src/adapters/: arxiv.rs  claude_cli.rs  filesystem.rs  mod.rs  semantic_scholar.rs  unpaywall.rs
marginalia-app/src-tauri/src/commands/: claude.rs  diagnostics.rs  graph.rs  import.rs  jobs.rs  mod.rs  notes.rs  papers.rs  pdf_finder.rs  projects.rs  settings.rs  vault.rs
marginalia-app/src-tauri/src/models/: mod.rs  notes.rs  paper.rs  project.rs  vault.rs
marginalia-app/src-tauri/src/services/: job_manager.rs  mod.rs  summarizer_service.rs
marginalia-app/src-tauri/src/storage/: citation_repo.rs  connection_repo.rs  db.rs  job_repo.rs  migration_v2.sql  mod.rs  notes_repo.rs  paper_repo.rs  project_repo.rs  schema.sql
marginalia-app/src-tauri/src/utils/: claude.rs  http.rs  keychain.rs  mod.rs
marginalia-app/src/api/: client.ts
marginalia-app/src/components/: index.ts  jobProgress.ts  toaster.ts
marginalia-app/src/state/: index.ts  jobs.ts  papers.ts  projects.ts  vault.ts
marginalia-app/src/views/: index.ts  library.ts  network.ts  paperDetail.ts
scripts/: quick_import.py  run_server.py  summarize_paper.sh
vault/: .marginalia_index.json  README.md
vault/.obsidian/: app.json  workspace.json
vault/papers/calvano2020aicollusion/: summary.md
vault/papers/carnehl2025quest/: summary.md
vault/papers/johnson2023platformalgorithms/: summary.md
vault/templates/: paper_summary.md
