[project]
name = "marginalia"
version = "0.1.0"
description = "Agent-based academic literature management system"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Gabriel Sekeres", email = "gs754@cornell.edu"}
]
keywords = ["academic", "literature", "papers", "obsidian", "agents"]

dependencies = [
    "anthropic>=0.40.0",
    "bibtexparser>=1.4.0",
    "httpx>=0.27.0",
    "pdfplumber>=0.11.0",
    "pymupdf>=1.24.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    # OAuth and auth dependencies
    "authlib>=1.3.0",
    "itsdangerous>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[project.scripts]
marginalia = "agents.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
