[package]
name = "marginalia"
version = "0.1.0"
description = "Academic literature management for macOS"
authors = ["Gabriel Sekeres"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

# PDF text extraction
pdf-extract = "0.8"

# BibTeX parsing
biblatex = "0.10"

# macOS Keychain
security-framework = "3"

# File watching
notify = "8"

# Async traits
async-trait = "0.1"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Regex for parsing
regex = "1"

# Directories
dirs = "6"

# URL encoding
urlencoding = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
